# dots

./: AGENTS.md  README.md  ensure.sh  migrate.sh
_package_template/meta/: manifest.sh
atuin/: setup.sh
atuin/meta/: manifest.sh  post_stow
bat/: README.md
bat/meta/: manifest.sh
bootstrap/: README.md  bootstrap.sh
btop/meta/: manifest.sh
chrome/meta/: manifest.sh
config/: README.md
config/.config/: .config  QtProject.conf  Trolltech.conf  VirtualBoxrc  bluedevilglobalrc  chrome-flags.conf  filetypesrc  gtkrc  gtkrc-2.0  gwenviewrc  kactivitymanagerd-statsrc  kactivitymanagerdrc  katerc  katevirc  kconf_updaterc  kdeglobals  kglobalshortcutsrc  kscreenlockerrc  kservicemenurc  ksmserverrc  ktrashrc  kuiviewerrc  kwinoutputconfig.json  kwinrc  kwriterc  last_wallpaper.txt  mimeapps.list  okularrc  plasma-org.kde.plasma.desktop-appletsrc  plasmarc  powerdevilrc  starship.toml  systemsettingsrc  tmux.conf  usage_history.json  user-dirs.dirs
config/meta/: manifest.sh
docs/: VM_TEST.md
dolphin/.config/: dolphinrc
dolphin/meta/: manifest.sh
dotctl/: .stow-local-ignore
dotctl/meta/: manifest.sh
dotctl/testing/: run
dunst/matugen/: dunstrc.template
home/: .zshrc  README.md
hyprland/: .stow-local-ignore  README.md
hyprland/hyprnospecialfade/: CMakeLists.txt  main.cpp
oh-my-zsh/: README.md
opencode/: .stow-local-ignore
settings/: README.md
setup/: welcome.sh
theming/: .stow-local-ignore
vscodium/: README.md
wallpapers/: README.md
waybar/: README.md  colors.css  config.jsonc  modules.json  style.css
zsh/: .zshenv  .zshrc
(+814 files in other folders)
